[project]
name = "kzp25eiti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.2",
    "matplotlib>=3.10.8",
    "nbconvert[webpdf]>=7.16.6",
    "numpy>=2.4.1",
    "pandoc>=2.4",
    "scipy>=1.17.0",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
